Description
Debug logs are spammed with "UOI_FLAGS unimplemented!" errs.
Furthermore, the lack of a proper implementation can trick programs into thinking they are not on an interactive winstation if WSF_VISIBLE flag is not set.
Attachments
Issue Links
- blocks
-
CORE-14287 Paint.NET v3.5.11 installer crashes
-
- Resolved
-
-
CORE-14422 Regression: NLite 1.4.9.3 (.NET2 app) does not longer close via top-right-x (NtUserGetObjectInformation UOI_FLAGS case)
-
- Resolved
-