[0.4.8][WIN32K] Implement UOI_FLAGS in NtUserGetObjectInformation().

Based from a patch by Jérôme Gardou.
Fixes CORE-13447 CORE-14422 CORE-14287

This fixes closing nLite 1.4.9.3 (.NET2) application, as well as any
other program that expects that the interactive window station is
reported as being visible. I thank Mark Jansen and Joachim Henze for
help and testing.

It regressed by SVN r74005 == git
d2f509628143d325d824c7da4206cf3cb933da74

The fix was picked from 0.4.9-dev-750-g
a55d7c692ba0215e976630df88782c1ca20e792e